Upload original dataset
Use us census api to find the original data

--- a/project.ipynb
+++ b/project.ipynb
@@ -5,35 +5,292 @@
    "execution_count": null,
    "id": "c1bb4abb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>POP</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>5024294</td>\n",
+       "      <td>0000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>5031864</td>\n",
+       "      <td>0000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>5050380</td>\n",
+       "      <td>0000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>5073903</td>\n",
+       "      <td>0000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>01</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>5108468</td>\n",
+       "      <td>0000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      NAME STATE  YEAR      POP   AGE SEX state\n",
+       "0  Alabama    01  2020  5024294  0000   0    01\n",
+       "1  Alabama    01  2020  5031864  0000   0    01\n",
+       "2  Alabama    01  2021  5050380  0000   0    01\n",
+       "3  Alabama    01  2022  5073903  0000   0    01\n",
+       "4  Alabama    01  2023  5108468  0000   0    01"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "asdasdad"
+    "import requests\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 1. API endpoint\n",
+    "url = \"https://api.census.gov/data/2023/pep/charv\"\n",
+    "\n",
+    "# 2. Parameters\n",
+    "params = {\n",
+    "    \"get\": \"NAME,STATE,YEAR,POP,AGE,SEX\",\n",
+    "    \"for\": \"state:*\"\n",
+    "}\n",
+    "\n",
+    "# 3. Send request\n",
+    "response = requests.get(url, params=params)\n",
+    "\n",
+    "# 4. Parse JSON\n",
+    "data = response.json()\n",
+    "\n",
+    "# 5. Convert to DataFrame\n",
+    "df = pd.DataFrame(data[1:], columns=data[0])\n",
+    "\n",
+    "df.sample(5)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
+   "id": "780e66ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\n",
+    "    \"original_dataset.csv\",\n",
+    "    index=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "41d45cb8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>POP</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2514</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>02</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>5959</td>\n",
+       "      <td>2400</td>\n",
+       "      <td>1</td>\n",
+       "      <td>02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86254</th>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>54</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>11075</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28567</th>\n",
+       "      <td>Iowa</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>42799</td>\n",
+       "      <td>5900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62705</th>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>39</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>143056</td>\n",
+       "      <td>0800</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58905</th>\n",
+       "      <td>New York</td>\n",
+       "      <td>36</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>137261</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                NAME STATE  YEAR     POP   AGE SEX state\n",
+       "2514          Alaska    02  2023    5959  2400   1    02\n",
+       "86254  West Virginia    54  2020   11075  2500   1    54\n",
+       "28567           Iowa    19  2021   42799  5900   0    19\n",
+       "62705           Ohio    39  2020  143056  0800   0    39\n",
+       "58905       New York    36  2023  137261  6000   2    36"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "asdasda"
+    "df.sample(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "9f410ffc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(90480, 7)\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
-    "second = 2"
+    "print(df.shape)\n",
+    "print(type(df.AGE[0]))"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "oyyenv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
